--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,6 +60,7 @@ input, select {
     background-color: #fdfdfd;
     padding: 1.5rem;
     border-radius: 15px;
+    border: 3px solid #395169;
 }
 
 .todo-container header {
